# technical_task_fabrica

./: .gitignore  README.md  pyproject.toml
config/: logger.py  settings.py  urls.py
src/account/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_userprofile.py
src/telegram_bot/: consumer.py  main.py  models.py  services.py
src/telegram_bot/management/commands/: run_bot.py
src/telegram_bot/migrations/: 0001_initial.py  0002_alter_telegramclient_token_api.py
src/telegram_bot_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/telegram_bot_api/migrations/: 0001_initial.py  0002_telegrammessage_created_date.py
